crates/wx-compiler/src/ast/snapshots/wx_compiler__ast__tests__fn_pointer_param.snap
---
source: crates/wx-compiler/src/ast/tests.rs
expression: case.ast
---
file_id: 0
diagnostics: []
items:
  - inner:
      inner:
        Function:
          id: 0
          pub_span: ~
          attributes: []
          signature:
            name:
              inner: 1
              span:
                start: 3
                end: 8
            type_params: []
            params:
              open:
                start: 8
                end: 9
              inner:
                - inner:
                    inner:
                      mut_span: ~
                      name:
                        inner: 2
                        span:
                          start: 9
                          end: 10
                      ty:
                        inner:
                          Function:
                            params:
                              open:
                                start: 14
                                end: 15
                              inner:
                                - inner:
                                    inner:
                                      name: ~
                                      ty:
                                        inner:
                                          Identifier:
                                            symbol: 3
                                        span:
                                          start: 15
                                          end: 18
                                    span:
                                      start: 15
                                      end: 18
                                  separator: ~
                              close:
                                start: 18
                                end: 19
                            result:
                              inner:
                                Identifier:
                                  symbol: 3
                              span:
                                start: 23
                                end: 26
                        span:
                          start: 12
                          end: 26
                    span:
                      start: 9
                      end: 26
                  separator:
                    start: 26
                    end: 27
                - inner:
                    inner:
                      mut_span: ~
                      name:
                        inner: 4
                        span:
                          start: 28
                          end: 29
                      ty:
                        inner:
                          Identifier:
                            symbol: 3
                        span:
                          start: 31
                          end: 34
                    span:
                      start: 28
                      end: 34
                  separator: ~
              close:
                start: 34
                end: 35
            result:
              inner:
                Identifier:
                  symbol: 3
              span:
                start: 39
                end: 42
          block:
            inner:
              Block:
                statements:
                  open:
                    start: 43
                    end: 44
                  inner:
                    - inner:
                        inner:
                          Expression:
                            inner:
                              Call:
                                callee:
                                  inner:
                                    Identifier:
                                      symbol: 2
                                  span:
                                    start: 49
                                    end: 50
                                arguments:
                                  - inner:
                                      inner:
                                        Identifier:
                                          symbol: 4
                                      span:
                                        start: 51
                                        end: 52
                                    separator: ~
                            span:
                              start: 49
                              end: 53
                        span:
                          start: 49
                          end: 53
                      separator: ~
                  close:
                    start: 54
                    end: 55
            span:
              start: 43
              end: 55
      span:
        start: 0
        end: 55
    separator: ~
