crates/wx-compiler/src/ast/snapshots/wx_compiler__ast__tests__function.snap
---
source: crates/wx-compiler/src/ast/tests.rs
expression: case.ast
---
file_id: 0
diagnostics: []
items:
  - inner:
      inner:
        Function:
          pub_span: ~
          attributes: []
          signature:
            name:
              inner: 1
              span:
                start: 3
                end: 6
            params:
              open:
                start: 6
                end: 7
              inner:
                - inner:
                    inner:
                      mut_span: ~
                      name:
                        inner: 2
                        span:
                          start: 7
                          end: 8
                      ty:
                        inner:
                          Identifier:
                            symbol: 3
                        span:
                          start: 10
                          end: 13
                    span:
                      start: 7
                      end: 13
                  separator:
                    start: 13
                    end: 14
                - inner:
                    inner:
                      mut_span: ~
                      name:
                        inner: 4
                        span:
                          start: 15
                          end: 16
                      ty:
                        inner:
                          Identifier:
                            symbol: 3
                        span:
                          start: 18
                          end: 21
                    span:
                      start: 15
                      end: 21
                  separator: ~
              close:
                start: 21
                end: 22
            result:
              inner:
                Identifier:
                  symbol: 3
              span:
                start: 26
                end: 29
          block:
            inner:
              Block:
                statements:
                  open:
                    start: 30
                    end: 31
                  inner:
                    - inner:
                        inner:
                          Expression:
                            inner:
                              Binary:
                                left:
                                  inner:
                                    Identifier:
                                      symbol: 2
                                  span:
                                    start: 36
                                    end: 37
                                operator:
                                  inner: Add
                                  span:
                                    start: 38
                                    end: 39
                                right:
                                  inner:
                                    Identifier:
                                      symbol: 4
                                  span:
                                    start: 40
                                    end: 41
                            span:
                              start: 36
                              end: 41
                        span:
                          start: 36
                          end: 41
                      separator: ~
                  close:
                    start: 42
                    end: 43
            span:
              start: 30
              end: 43
      span:
        start: 0
        end: 43
    separator: ~
