crates/wx-compiler/src/ast/snapshots/wx_compiler__ast__tests__function_mut_param.snap
---
source: crates/wx-compiler/src/ast/tests.rs
expression: case.ast
---
file_id: 0
diagnostics: []
items:
  - inner:
      inner:
        Function:
          id: 0
          pub_span: ~
          attributes: []
          signature:
            name:
              inner: 1
              span:
                start: 3
                end: 11
            params:
              open:
                start: 11
                end: 12
              inner:
                - inner:
                    inner:
                      mut_span:
                        start: 12
                        end: 15
                      name:
                        inner: 2
                        span:
                          start: 16
                          end: 17
                      ty:
                        inner:
                          Identifier:
                            symbol: 3
                        span:
                          start: 19
                          end: 22
                    span:
                      start: 16
                      end: 22
                  separator: ~
              close:
                start: 22
                end: 23
            result:
              inner:
                Identifier:
                  symbol: 3
              span:
                start: 27
                end: 30
          block:
            inner:
              Block:
                statements:
                  open:
                    start: 31
                    end: 32
                  inner:
                    - inner:
                        inner:
                          LocalDefinition:
                            mut_span:
                              start: 43
                              end: 46
                            name:
                              inner: 4
                              span:
                                start: 47
                                end: 50
                            ty:
                              inner:
                                Identifier:
                                  symbol: 3
                              span:
                                start: 52
                                end: 55
                            value:
                              inner:
                                Int:
                                  value: 0
                              span:
                                start: 58
                                end: 59
                        span:
                          start: 37
                          end: 59
                      separator:
                        start: 59
                        end: 60
                    - inner:
                        inner:
                          Expression:
                            inner:
                              Binary:
                                left:
                                  inner:
                                    Identifier:
                                      symbol: 4
                                  span:
                                    start: 65
                                    end: 68
                                operator:
                                  inner: AddAssign
                                  span:
                                    start: 69
                                    end: 71
                                right:
                                  inner:
                                    Identifier:
                                      symbol: 2
                                  span:
                                    start: 72
                                    end: 73
                            span:
                              start: 65
                              end: 73
                        span:
                          start: 65
                          end: 73
                      separator:
                        start: 73
                        end: 74
                    - inner:
                        inner:
                          Expression:
                            inner:
                              Identifier:
                                symbol: 4
                            span:
                              start: 79
                              end: 82
                        span:
                          start: 79
                          end: 82
                      separator: ~
                  close:
                    start: 83
                    end: 84
            span:
              start: 31
              end: 84
      span:
        start: 0
        end: 84
    separator: ~
