crates/wx-compiler/src/ast/snapshots/wx_compiler__ast__tests__generic_function_multiple_params_and_bounds.snap
---
source: crates/wx-compiler/src/ast/tests.rs
expression: case.ast
---
file_id: 0
diagnostics: []
items:
  - inner:
      inner:
        Function:
          id: 0
          pub_span: ~
          attributes: []
          signature:
            name:
              inner: 1
              span:
                start: 3
                end: 6
            type_params:
              - name:
                  inner: 2
                  span:
                    start: 7
                    end: 8
                bounds:
                  - inner:
                      Identifier:
                        symbol: 3
                    span:
                      start: 10
                      end: 14
                  - inner:
                      Identifier:
                        symbol: 4
                    span:
                      start: 17
                      end: 22
              - name:
                  inner: 5
                  span:
                    start: 24
                    end: 25
                bounds: []
            params:
              open:
                start: 26
                end: 27
              inner:
                - inner:
                    inner:
                      mut_span: ~
                      name:
                        inner: 6
                        span:
                          start: 27
                          end: 28
                      ty:
                        inner:
                          Identifier:
                            symbol: 2
                        span:
                          start: 30
                          end: 31
                    span:
                      start: 27
                      end: 31
                  separator:
                    start: 31
                    end: 32
                - inner:
                    inner:
                      mut_span: ~
                      name:
                        inner: 7
                        span:
                          start: 33
                          end: 34
                      ty:
                        inner:
                          Identifier:
                            symbol: 5
                        span:
                          start: 36
                          end: 37
                    span:
                      start: 33
                      end: 37
                  separator: ~
              close:
                start: 37
                end: 38
            result:
              inner:
                Identifier:
                  symbol: 2
              span:
                start: 42
                end: 43
          block:
            inner:
              Block:
                statements:
                  open:
                    start: 44
                    end: 45
                  inner:
                    - inner:
                        inner:
                          Expression:
                            inner:
                              Identifier:
                                symbol: 6
                            span:
                              start: 50
                              end: 51
                        span:
                          start: 50
                          end: 51
                      separator: ~
                  close:
                    start: 52
                    end: 53
            span:
              start: 44
              end: 53
      span:
        start: 0
        end: 53
    separator: ~
