crates/wx-compiler/src/ast/snapshots/wx_compiler__ast__tests__generic_function_unconstrained.snap
---
source: crates/wx-compiler/src/ast/tests.rs
expression: case.ast
---
file_id: 0
diagnostics: []
items:
  - inner:
      inner:
        Function:
          id: 0
          pub_span: ~
          attributes: []
          signature:
            name:
              inner: 1
              span:
                start: 3
                end: 11
            type_params:
              - name:
                  inner: 2
                  span:
                    start: 12
                    end: 13
                bounds: []
            params:
              open:
                start: 14
                end: 15
              inner:
                - inner:
                    inner:
                      mut_span: ~
                      name:
                        inner: 3
                        span:
                          start: 15
                          end: 16
                      ty:
                        inner:
                          Identifier:
                            symbol: 2
                        span:
                          start: 18
                          end: 19
                    span:
                      start: 15
                      end: 19
                  separator: ~
              close:
                start: 19
                end: 20
            result:
              inner:
                Identifier:
                  symbol: 2
              span:
                start: 24
                end: 25
          block:
            inner:
              Block:
                statements:
                  open:
                    start: 26
                    end: 27
                  inner:
                    - inner:
                        inner:
                          Expression:
                            inner:
                              Identifier:
                                symbol: 3
                            span:
                              start: 32
                              end: 33
                        span:
                          start: 32
                          end: 33
                      separator: ~
                  close:
                    start: 34
                    end: 35
            span:
              start: 26
              end: 35
      span:
        start: 0
        end: 35
    separator: ~
