crates/wx-compiler/src/ast/snapshots/wx_compiler__ast__tests__generic_signatures.snap
---
source: crates/wx-compiler/src/ast/tests.rs
expression: case.ast
---
file_id: 0
diagnostics: []
items:
  - inner:
      inner:
        Function:
          id: 0
          pub_span: ~
          attributes: []
          signature:
            name:
              inner: 0
              span:
                start: 3
                end: 6
            type_params:
              - name:
                  inner: 1
                  span:
                    start: 7
                    end: 8
                bounds: ~
              - name:
                  inner: 2
                  span:
                    start: 10
                    end: 11
                bounds:
                  inner:
                    BoundList:
                      - inner:
                          Path:
                            - ident:
                                inner: 3
                                span:
                                  start: 13
                                  end: 17
                              type_args: []
                        span:
                          start: 13
                          end: 17
                      - inner:
                          Path:
                            - ident:
                                inner: 4
                                span:
                                  start: 20
                                  end: 25
                              type_args: []
                        span:
                          start: 20
                          end: 25
                  span:
                    start: 13
                    end: 25
              - name:
                  inner: 5
                  span:
                    start: 27
                    end: 28
                bounds:
                  inner:
                    Path:
                      - ident:
                          inner: 6
                          span:
                            start: 30
                            end: 38
                        type_args: []
                  span:
                    start: 30
                    end: 38
            params:
              - inner:
                  inner:
                    mut_span: ~
                    name:
                      inner: 7
                      span:
                        start: 40
                        end: 44
                    ty:
                      inner:
                        Path:
                          - ident:
                              inner: 1
                              span:
                                start: 46
                                end: 47
                            type_args: []
                      span:
                        start: 46
                        end: 47
                  span:
                    start: 40
                    end: 47
                separator:
                  start: 47
                  end: 48
              - inner:
                  inner:
                    mut_span: ~
                    name:
                      inner: 8
                      span:
                        start: 49
                        end: 55
                    ty:
                      inner:
                        Path:
                          - ident:
                              inner: 2
                              span:
                                start: 57
                                end: 58
                            type_args: []
                      span:
                        start: 57
                        end: 58
                  span:
                    start: 49
                    end: 58
                separator:
                  start: 58
                  end: 59
              - inner:
                  inner:
                    mut_span: ~
                    name:
                      inner: 9
                      span:
                        start: 60
                        end: 65
                    ty:
                      inner:
                        Path:
                          - ident:
                              inner: 5
                              span:
                                start: 67
                                end: 68
                            type_args: []
                      span:
                        start: 67
                        end: 68
                  span:
                    start: 60
                    end: 68
                separator: ~
            result:
              inner:
                Path:
                  - ident:
                      inner: 2
                      span:
                        start: 73
                        end: 74
                    type_args: []
              span:
                start: 73
                end: 74
          block:
            inner:
              Block:
                statements:
                  - inner:
                      inner:
                        Expression:
                          inner:
                            Path:
                              - ident:
                                  inner: 8
                                  span:
                                    start: 81
                                    end: 87
                                type_args: []
                          span:
                            start: 81
                            end: 87
                      span:
                        start: 81
                        end: 87
                    separator: ~
            span:
              start: 75
              end: 89
      span:
        start: 0
        end: 89
    separator: ~
