crates/wx-compiler/src/ast/snapshots/wx_compiler__ast__tests__global.snap
---
source: crates/wx-compiler/src/ast/tests.rs
expression: case.ast
---
file_id: 0
diagnostics: []
items:
  - inner:
      inner:
        Global:
          mut_span:
            start: 7
            end: 10
          name:
            inner: 1
            span:
              start: 11
              end: 18
          ty:
            inner:
              Identifier:
                symbol: 2
            span:
              start: 20
              end: 23
          value:
            inner:
              Int:
                value: 0
            span:
              start: 26
              end: 27
      span:
        start: 0
        end: 27
    separator: ~
