crates/wx-compiler/src/ast/snapshots/wx_compiler__ast__tests__if_else.snap
---
source: crates/wx-compiler/src/ast/tests.rs
expression: case.ast
---
file_id: 0
diagnostics: []
items:
  - inner:
      inner:
        Function:
          pub_span: ~
          attributes: []
          signature:
            name:
              inner: 1
              span:
                start: 3
                end: 7
            params:
              open:
                start: 7
                end: 8
              inner:
                - inner:
                    inner:
                      mut_span: ~
                      name:
                        inner: 2
                        span:
                          start: 8
                          end: 9
                      ty:
                        inner:
                          Identifier:
                            symbol: 3
                        span:
                          start: 11
                          end: 14
                    span:
                      start: 8
                      end: 14
                  separator: ~
              close:
                start: 14
                end: 15
            result:
              inner:
                Identifier:
                  symbol: 3
              span:
                start: 19
                end: 22
          block:
            inner:
              Block:
                statements:
                  open:
                    start: 23
                    end: 24
                  inner:
                    - inner:
                        inner:
                          Expression:
                            inner:
                              IfElse:
                                condition:
                                  inner:
                                    Binary:
                                      left:
                                        inner:
                                          Identifier:
                                            symbol: 2
                                        span:
                                          start: 32
                                          end: 33
                                      operator:
                                        inner: Greater
                                        span:
                                          start: 34
                                          end: 35
                                      right:
                                        inner:
                                          Int:
                                            value: 0
                                        span:
                                          start: 36
                                          end: 37
                                  span:
                                    start: 32
                                    end: 37
                                then_block:
                                  inner:
                                    Block:
                                      statements:
                                        open:
                                          start: 38
                                          end: 39
                                        inner:
                                          - inner:
                                              inner:
                                                Expression:
                                                  inner:
                                                    Int:
                                                      value: 1
                                                  span:
                                                    start: 48
                                                    end: 49
                                              span:
                                                start: 48
                                                end: 49
                                            separator: ~
                                        close:
                                          start: 54
                                          end: 55
                                  span:
                                    start: 38
                                    end: 55
                                else_block:
                                  inner:
                                    Block:
                                      statements:
                                        open:
                                          start: 61
                                          end: 62
                                        inner:
                                          - inner:
                                              inner:
                                                Expression:
                                                  inner:
                                                    Int:
                                                      value: 0
                                                  span:
                                                    start: 71
                                                    end: 72
                                              span:
                                                start: 71
                                                end: 72
                                            separator: ~
                                        close:
                                          start: 77
                                          end: 78
                                  span:
                                    start: 61
                                    end: 78
                            span:
                              start: 29
                              end: 78
                        span:
                          start: 29
                          end: 78
                      separator: ~
                  close:
                    start: 79
                    end: 80
            span:
              start: 23
              end: 80
      span:
        start: 0
        end: 80
    separator: ~
